src/test/resources/purescript_examples/passing/InferRecFunWithConstrainedArgument.purs.psi
Purescript File
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Control')
            PsiElement(.)('.')
            PsiElement(proper name)('Monad')
            PsiElement(.)('.')
            PsiElement(proper name)('Eff')
            PsiElement(.)('.')
            PsiElement(proper name)('Console')
          PsiElement(whitespace)(' ')
        PsiElement(()('(')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PsiElement(identifier)('log')
        PsiElement(,)(',')
        PsiElement(whitespace)(' ')
        PSPositionedDeclarationRefImpl(PositionedDeclarationRef)
          PSValueRefImpl(ValueRef)
            PsiElement(identifier)('logShow')
        PsiElement())(')')
        PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PSBinderImpl(Binder)
          PSNumberBinderImpl(NumberBinder)
            PsiElement(natural)('100')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSNumericLiteralImpl(NumericLiteral)
              PsiElement(natural)('100')
              PsiElement(whitespace)('\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('n')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PSVarImpl(Var)
              PSQualifiedImpl(Qualified)
                PsiElement(identifier)('test')
            PSParensImpl(Parens)
              PsiElement(()('(')
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSNumericLiteralImpl(NumericLiteral)
                    PsiElement(natural)('1')
                    PsiElement(whitespace)(' ')
                PSIdentInfixImpl(IdentInfix)
                  PSQualifiedImpl(Qualified)
                    PsiElement(operator)('+')
                    PsiElement(whitespace)(' ')
                PSValueImpl(Value)
                  PSPrefixValueImpl(PrefixValue)
                    PSVarImpl(Var)
                      PSQualifiedImpl(Qualified)
                        PsiElement(identifier)('n')
              PsiElement())(')')
              PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSQualifiedImpl(Qualified)
                      PsiElement(identifier)('logShow')
                      PsiElement(whitespace)(' ')
                  PSParensImpl(Parens)
                    PsiElement(()('(')
                    PSValueImpl(Value)
                      PSPrefixValueImpl(PrefixValue)
                        PSVarImpl(Var)
                          PSQualifiedImpl(Qualified)
                            PsiElement(identifier)('test')
                            PsiElement(whitespace)(' ')
                        PSNumericLiteralImpl(NumericLiteral)
                          PsiElement(natural)('0')
                    PsiElement())(')')
                    PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSVarImpl(Var)
                    PSQualifiedImpl(Qualified)
                      PsiElement(identifier)('log')
                      PsiElement(whitespace)(' ')
                  PSStringLiteralImpl(StringLiteral)
                    PsiElement(string)('"Done"')
                    PsiElement(whitespace)('\n')
